--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     }
 </style>
 <!--Div for map-->
-<div id="video">
+<div id="video" style="display: none;">
 <video width="100%" height="auto" autoplay="autoplay">
   <source src="http://www.w3schools.com/tags/mov_bbb.mp4" type='video/ogg; codecs="theora, vorbis"'>
 </video>
