--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <video id="start01" autoplay loop="false" src="Resources/Start.mp4"></video>
     </a-assets>
   <!-- Using the asset management system. -->
-    <a-video id="video1" src="#start01" width="7" height="5" position="0 0 -5"></a-video>
+   <!-- <a-video id="video1" src="#start01" width="7" height="5" position="0 0 -5"></a-video>-->
 
     <a-image id="image" width="200" height="150" position="-40 15 -85" src="" ></a-image>
     <a-image id="timeline_Insights" width="60" height="60" position="70 25 -80" src="" ></a-image>
@@ -185,13 +185,13 @@
     map.on('load', function () {
     });
 
-    var video = document.getElementById('start01');
+    /*var video = document.getElementById('start01');
     video.addEventListener('ended', function (evt) { 
         video.parentNode.removeChild(video);
         var videoframe = document.getElementById('video1');
         videoframe.parentNode.removeChild(videoframe);
 
-        console.log("video stopped");
+        console.log("video stopped");*/
         var counter = 0;
         var selectedyear = 2010;
         var i = setInterval(function(){
@@ -207,7 +207,7 @@
                 clearInterval(i);
             }
         }, 10000);
-    });
+   // });
 
     /*$('#dates a').click(function(event){
                 event.preventDefault();
