--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     </a-assets>
     <a-entity obj-model="obj: #georgia-obj; mtl: #georgia-mtl"></a-entity>-->
     <a-sky color="#000"></a-sky>
-    <a-assets>
+   <!-- <a-assets>
         <video id="start01" autoplay loop="false" src="Resources/Start.mp4"></video>
-    </a-assets>
+    </a-assets>-->
   <!-- Using the asset management system. -->
    <!-- <a-video id="video1" src="#start01" width="7" height="5" position="0 0 -5"></a-video>-->
 
