--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             var coloranim=document.createElement('a-animation');
             coloranim.setAttribute('attribute','material.color');
             coloranim.setAttribute('to','blue');
-            yeprevar.appendChild(coloranim);
+            prev.appendChild(coloranim);
             
           }
           previousSelectedYear = selectedyear;
