--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </a-assets>
   <!-- Using the asset management system. -->
     <a-video id="video1" class="video" src="#start01" width="16" height="12" position="0 1.5 10"></a-video>
-    <a-link id="storyboard" href="VR-slide/index.html" position="-3.5 1.5 -1.0"></a-link>
+   
     <a-entity id="link1" onClick="location.href='VR-slide/index.html'"></a-entity>
     <a-image id="image" width="26" height="20" position="-9 4 -21" src="" ></a-image>
     <a-image id="timeline_Insights" width="15" height="15" position="13 6 -20" src="" ></a-image>
@@ -232,7 +232,7 @@
         console.log("video stopped");
         var counter = 0;
         var i = setInterval(function(){
-            document.getElementById('link1').click();
+            //document.getElementById('link1').click();
             //document.querySelector('a-link').navigate('VR-slide/index.html');
             //var currentJsonFile = 'Geojson/georgia'+selectedyear+'.geo.json';
             success = loadMap(selectedyear);
